--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,3 +1,8 @@
+
+h1.info{
+  text-align: center;
+}
+
 .header {
   h1 {
     font-size: 3.3rem;
@@ -5,6 +10,7 @@
     text-align: center;
     letter-spacing: 2px;
   }
+  
   nav {
     position: absolute;
     top: 16px;
