css boutton surlignement fix

--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -85,6 +85,7 @@
   }
   .btn {
     position:absolute;
+    user-select: none;
     cursor: default;
     bottom: 16px;
     transform: translateX(-50%);
